--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^2.6.6",
-    "vue-i18n": "^8.8.2"
+    "vue-i18n": "^8.8.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
